# mcp-server-for-copilot

./: .env.template  .env_sample  .gitignore  .ruff.toml  Dockerfile  README.md  agent_definition.json  main.py  pyproject.toml  sample.env
.github/acl/: access.yml
.github/compliance/: inventory.yml
src/: cps_connector.py  main.py  mcp_server_types.py
src/copilot_studio/: copilot_agent.py  directline_client.py
